2007-12-05  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* CD/README-DE.html: New. Overview HTML page for the contents
	of the Gpg4win CD.

2007-12-05  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* README-BETA-de.txt: Updated with test results for S/MIME
	signatures and decryption.

2007-12-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/versions.m4: Removed leading "/" for URLs to manuals.
	This enables the offline version of the html pages to work better.

2007-12-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-on-vm.htm4, website/build-installer-on-vm-de.htm4,
	website/build-installer-on-w32-debian-screenshots-de.htm4,
	website/build-installer-on-w32-debian-screenshots.htm4: Fixes in command
	line samples.

2007-12-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* README-BETA-de.txt: New. Report (in german) on status of
	current Beta version.

2007-11-26  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex: Fixed spelling: Gpg4Win -> Gpg4win.

2007-11-26  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* manual/einsteiger.tex: Added section about deinstallation.

2007-11-26  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-de.htm4: Updates according to
	changes in ../../src/README-msi.txt

2007-11-23  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* website/build-installer-de.htm4: Added description on how
	to create MSI installer.

2007-11-15  Werner Koch  <wk@g10code.com>

	* manual/einsteiger.tex (section*{Impressum}): Remove invariant
	section and updated notices.
	* manual/durchblicker.tex (section*{Impressum}): Ditto.
	* manual/novices.tex (section*{Imprint}): Ditto.

2007-10-05  Bernhard Reiter <bernhard.reiter@intevation.de>

	* website/Kurzstudie-Nachhaltige-FS-Beispiel-Gpg4win.htm4:
	Better Intevation logo and corrected link to Bernhard's Artikel. 