@@ -1,5 +1,13 @@
 2007-12-05  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
 
+	* manuals/Makefile.am: replaced target webversion by target
+	htmlversion which creates a separate directory "html" and
+	copies anything relevant there.
+	This simplifies and removes redundancy for targets online
+	and preview.
+
+2007-12-05  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>
+
 	* CD/README-DE.html: New. Overview HTML page for the contents
 	of the Gpg4win CD.
 
